<resources>
    <string name="app_name">metoothanks</string>
    <string name="update_availabe">Looks like a newer version is available. Tap here to update!</string>
    <string name="update_not_available">Grats, you\'re running the latest version.</string>
    <string name="update_checking">Checking for updates…</string>

    <string name="button_empty_canvas">empty canvas</string>
    <string name="button_load_from_gallery">load from gallery</string>

    <string name="ignore">no thanks</string>

    <string name="update_url">https://github.com/tag-them/metoothanks/releases</string>

    <string name="action_open">Open…</string>
    <string name="action_save">Save</string>
    <string name="action_close">Close</string>
    <string name="action_share">Share</string>
    <string name="action_export">Export</string>
    <string name="action_add">Add</string>
    <string name="action_settings">Settings</string>

    <string name="action_add_text">Add Text</string>
    <string name="action_add_image">Add Image</string>

    <string name="action_delete">Delete</string>
    <string name="action_item_move_forward">Bring forward</string>
    <string name="action_item_move_backward">Move backward</string>
    <string name="action_item_edit">Edit</string>

    <string name="action_image_rotate_counterclockwise">Rotate left</string>
    <string name="action_image_rotate_clockwise">Rotate right</string>

    <string name="action_text_align_left">Align left</string>
    <string name="action_text_align_right">Align right</string>
    <string name="action_text_shrink">Decrease font size</string>
    <string name="action_text_enlarge">Increase font size</string>

    <string name="exit_confirmation">Really quit?</string>
    <string name="choose_exit">ye</string>
    <string name="choose_stay">no</string>

    <string name="ok_hand_sign_emoji">👌</string>
    <string name="confirmation_string">do it</string>
    <string name="send_to">Send to</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
		based on your message history
	</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_edit">Edit</string>
</resources>
