<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
	
	<item
		android:id="@+id/action_text_align_left"
		android:icon="@drawable/icon_text_align_left"
		android:title="@string/action_text_align_left"
		app:showAsAction="always"/>
	<item
		android:id="@+id/action_text_align_right"
		android:icon="@drawable/icon_text_align_right"
		android:title="@string/action_text_align_right"
		app:showAsAction="always"/>
	<item
		android:id="@+id/action_item_edit"
		android:icon="@drawable/icon_item_edit"
		android:title="@string/action_item_edit"
		app:showAsAction="always"/>
	<item
		android:id="@+id/action_text_shrink"
		android:icon="@drawable/icon_text_shrink"
		android:title="@string/action_text_shrink"
		app:showAsAction="always"/>
	<item
		android:id="@+id/action_text_enlarge"
		android:icon="@drawable/icon_text_enlarge"
		android:title="@string/action_text_enlarge"
		app:showAsAction="always"/>
</menu>