<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.itiswednesday.metoothanks.activities.Draw">
    <!--<item-->
    <!--android:id="@+id/action_settings"-->
    <!--android:title="@string/action_settings"-->
    <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/action_close"
        android:icon="@drawable/icon_close"
        android:title="@string/action_close"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/icon_share"
        android:title="@string/action_share"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction,AppCompatResource" />
    <item
        android:id="@+id/action_export"
        android:icon="@drawable/icon_export"
        android:title="@string/action_export"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/icon_add"
        android:title="@string/action_add"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_add_image"
                android:icon="@drawable/icon_add_image"
                android:title="@string/action_add_image" />
            <item
                android:id="@+id/action_add_text"
                android:icon="@drawable/icon_add_text"
                android:title="@string/action_add_text"
                app:showAsAction="always" />
        </menu>
    </item>

</menu>
