<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="tag_them.metoothanks.activities.Draw">
	<item
		android:id="@+id/action_export"
		android:icon="@drawable/icon_export"
		android:orderInCategory="99"
		android:title="@string/action_export"
		app:showAsAction="always"/>
	<!--<item-->
		<!--android:id="@+id/action_settings"-->
		<!--android:icon="@drawable/icon_settings"-->
		<!--android:orderInCategory="98"-->
		<!--android:title="@string/action_settings"-->
		<!--app:showAsAction="always"/>-->
	<!--<item-->
		<!--android:id="@+id/action_resize"-->
		<!--android:icon="@drawable/icon_resize"-->
		<!--android:orderInCategory="99"-->
		<!--android:title="@string/action_resize"-->
		<!--android:visible="false"-->
		<!--app:showAsAction="always"/>-->
	<item
		android:id="@+id/action_add_text"
		android:icon="@drawable/icon_add_text"
		android:orderInCategory="100"
		android:title="@string/action_add_text"
		app:showAsAction="always"/>
	<item
		android:id="@+id/action_add_image"
		android:icon="@drawable/icon_add_image"
		android:orderInCategory="101"
		android:title="@string/action_add_image"
		app:showAsAction="always"/>
</menu>
